--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
 }
+.monaco-editor {
+    padding: 0.8rem;
+    /* box-shadow: 0px 0px 15px -3px rgba(0, 0, 0, 0.1); */
+}
